--- a/src/app/views/account/account.component.scss
+++ b/src/app/views/account/account.component.scss
@@ -19,3 +19,15 @@
 mat-divider{
     width: 100%
 }
+.cards-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.saved-palette-card{
+    flex: 1;
+    min-width: 200px;
+    max-width: none;
+    &:not(:last-child){
+        margin-right: 10px;
+    }
+}
