--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,5 +50,37 @@ $palette-theme: mat-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
+.prev-section{
+  display: flex;
+  flex: 1;
+  justify-content: space-around;
+  &.color-prev-section{
+      min-width: 180px;
+      justify-content: flex-start;
+  }
+  &.button-section{
+      max-width: 100px;
+      flex-direction: column;
+      margin-bottom: 10px;
+      .mat-stroked-button{
+          margin-top: 10px;
+      }
+  }
+}
+.color-preview{
+  height: 70px;
+  width: 70px;
+  margin-right: 1em;
+}
+.palette-card{
+  min-width: 350px;
+  max-width: 450px;
+  display: flex !important;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 16px 20px 30px !important;
+  margin-bottom: 1em;
+}
+
 html, body { height: 100%; }
 body { background-color: rgb(218, 216, 216); margin: 0 }
